--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,inital-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <title>chat</title>
+    <link rel="stylesheet" type="text/css" href="./static/css/reset.css">
   </head>
   <body>
     <div id="app"></div>
